[package]
name = "record"
version = "0.0.1"
description = "query LOL matchHistory"
authors = ["Java_S"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.0", features = [] }
embed-resource = "1.7"

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "window-close", "window-hide", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
reqwest = { version = "0.11.14", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.28.0"
base64 = "0.21.0"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.
